[project]
name = "random-port"
version = "0.0.5"
description = "Generate a free TCP or UDP random port"
authors = [{ name = "Fabrício Barros Cabral", email = "fabriciofx@gmail.com" }]
readme = "README.md"
license = "MIT"
keywords = ["socket", "tcp", "udp", "random", "port", "test"]
requires-python = ">=3.14"
dependencies = []

[project.urls]
homepage = "https://github.com/fabriciofx/random_port"
bug-tracker = "https://github.com/fabriciofx/random_port/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-n auto"

[dependency-groups]
dev = ["pytest-xdist>=3.8.0"]
